[gd_scene load_steps=25 format=3 uid="uid://bbr5hssmqx5vl"]

[ext_resource type="Script" path="res://scripts/characters/enemies/boss_slime.gd" id="1_mrlj3"]
[ext_resource type="Texture2D" uid="uid://bhdmq6ekebqx1" path="res://art/characters/enemies/green_slime/Idle.png" id="2_pcbdu"]
[ext_resource type="Texture2D" uid="uid://dgtd1dfpsi0io" path="res://art/characters/enemies/green_slime/Hit.png" id="3_ey67a"]
[ext_resource type="Texture2D" uid="uid://cjjwa6vwoi6i5" path="res://art/effects/smoke.png" id="3_qc7rt"]
[ext_resource type="Texture2D" uid="uid://dbvn2mi8bh5fd" path="res://art/characters/enemies/green_slime/Jump.png" id="4_ypmfb"]
[ext_resource type="Shader" uid="uid://ceohf70jbda8a" path="res://shaders/lightning_shader.tres" id="6_5jm1s"]
[ext_resource type="Texture2D" uid="uid://wcm4vnilky5y" path="res://art/items/laser beam.jpg" id="7_d2uxk"]
[ext_resource type="Texture2D" uid="uid://ds1n8adbea6u3" path="res://art/items/SparkPart.png" id="8_co5xn"]

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_lai3o"]
radius = 6.0
height = 22.0

[sub_resource type="Animation" id="Animation_te1hr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("hit_box/CollisionShape2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("hit_box/CollisionShape2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("IdleSprite:frame")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IdleSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("deathEffect:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("deathEffect:frame")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HitSprite:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("JumpSprite:visible")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("JumpSprite:frame")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("HitSprite:frame")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_k4m0l"]
resource_name = "death"
length = 0.6
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IdleSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("deathEffect:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("deathEffect:frame")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("JumpSprite:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_o6rwf"]
resource_name = "hit"
length = 0.4
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("HitSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IdleSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("JumpSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("deathEffect:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("HitSprite:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_p8etq"]
resource_name = "idle"
loop_mode = 1
step = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("IdleSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("HitSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("JumpSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("IdleSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_a1onh"]
resource_name = "jump"
length = 1.2
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("JumpSprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6, 7, 8, 9, 10, 11, 12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("IdleSprite:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("HitSprite:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("JumpSprite:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_22prc"]
_data = {
"RESET": SubResource("Animation_te1hr"),
"death": SubResource("Animation_k4m0l"),
"hit": SubResource("Animation_o6rwf"),
"idle": SubResource("Animation_p8etq"),
"jump": SubResource("Animation_a1onh")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_e6ql3"]
radius = 9.0

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_tg31k"]
radius = 11.0
height = 38.0

[sub_resource type="ShaderMaterial" id="ShaderMaterial_4otbo"]
shader = ExtResource("6_5jm1s")
shader_parameter/Vanish_Value = 0.0
shader_parameter/Speed = Vector2(0, 0)
shader_parameter/basic_texture = ExtResource("7_d2uxk")

[sub_resource type="CanvasItemMaterial" id="CanvasItemMaterial_mlq1t"]
blend_mode = 1
light_mode = 1

[sub_resource type="Curve" id="Curve_cxk6w"]
_data = [Vector2(0, 0.505494), 0.0, 0.0, 0, 0, Vector2(1, 0.131868), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_c1ufk"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="Curve" id="Curve_bj8an"]
_data = [Vector2(0, 1), 0.0, 0.0, 0, 0, Vector2(1, 1), 0.0, 0.0, 0, 0]
point_count = 2

[sub_resource type="CurveXYZTexture" id="CurveXYZTexture_v0qmg"]
curve_x = SubResource("Curve_cxk6w")
curve_y = SubResource("Curve_c1ufk")
curve_z = SubResource("Curve_bj8an")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_tjyo4"]
particle_flag_align_y = true
particle_flag_disable_z = true
emission_shape = 6
emission_ring_axis = Vector3(0, 0, 1)
emission_ring_height = 50.0
emission_ring_radius = 50.0
emission_ring_inner_radius = 0.0
direction = Vector3(0, 1, 0)
initial_velocity_min = -500.0
initial_velocity_max = -400.0
radial_velocity_min = -478.88
radial_velocity_max = -278.88
gravity = Vector3(0, 98, 0)
scale_min = 0.5
scale_max = 2.0
scale_curve = SubResource("CurveXYZTexture_v0qmg")
color = Color(0.533333, 1, 0.368627, 1)

[node name="BossSlime" type="CharacterBody2D" groups=["gameplay", "slime"]]
z_index = 1
collision_layer = 2
collision_mask = 2
script = ExtResource("1_mrlj3")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
z_index = 1
position = Vector2(0, 6)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_lai3o")

[node name="IdleSprite" type="Sprite2D" parent="."]
position = Vector2(0, -8)
texture = ExtResource("2_pcbdu")
hframes = 5

[node name="HitSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -8)
texture = ExtResource("3_ey67a")
hframes = 5

[node name="JumpSprite" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, -8)
texture = ExtResource("4_ypmfb")
hframes = 13

[node name="deathEffect" type="Sprite2D" parent="."]
visible = false
position = Vector2(0, 0.2)
scale = Vector2(2.1125, 1.86875)
texture = ExtResource("3_qc7rt")
hframes = 6

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_22prc")
}

[node name="hit_box" type="Area2D" parent="."]
position = Vector2(0, 12)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hit_box"]
position = Vector2(0, -5)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_e6ql3")

[node name="hurt_box" type="Area2D" parent="."]
position = Vector2(0, 12)
collision_layer = 4
collision_mask = 4

[node name="CollisionShape2D" type="CollisionShape2D" parent="hurt_box"]
position = Vector2(0, -10)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_tg31k")

[node name="direction_timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[node name="Line2D" type="Line2D" parent="."]
visible = false
z_index = 5
material = SubResource("ShaderMaterial_4otbo")
position = Vector2(-79, 16)
scale = Vector2(0.173925, 0.521852)
points = PackedVector2Array(52, 35, 79, -14)
width = 40.0
default_color = Color(0.358698, 0.03558, 0.023435, 1)
texture_mode = 2

[node name="GPUParticles2D" type="GPUParticles2D" parent="Line2D"]
visible = false
material = SubResource("CanvasItemMaterial_mlq1t")
position = Vector2(340, 393)
amount = 5
process_material = SubResource("ParticleProcessMaterial_tjyo4")
texture = ExtResource("8_co5xn")
lifetime = 0.15
fixed_fps = 60

[connection signal="area_entered" from="hurt_box" to="." method="_on_hurt_box_area_entered"]
[connection signal="timeout" from="direction_timer" to="." method="_on_direction_timer_timeout"]
